Bugfix: re-align the notes block
Fixes #97

--- a/src/scss/modules/_post-viewer.scss
+++ b/src/scss/modules/_post-viewer.scss
@@ -55,6 +55,7 @@ section#image-extra-controls {
     div#image-resize-cycle {
         form.grid-form {
             width: unset;
+            margin: 0.25rem 0;
         }
     }
 
